fix: align pagination

--- a/src/App/pages/Main/Main.module.scss
+++ b/src/App/pages/Main/Main.module.scss
@@ -7,4 +7,9 @@
   flex-direction: column;
   row-gap: 16px;
   padding: 20px 0;
+
+  &__section {
+    display: flex;
+    justify-content: center;
+  }
 }
